filegroup(
    name = "all",
    srcs = glob(["*.cpp", "*.h", "*.hpp"])
)

cc_library(
    name = "spdlog",
    srcs = ["@spdlog//:include"],
    linkstatic=1
)

cc_library(
    name = "cpptoml",
    srcs = ["@cpptoml//:include"],
    linkstatic=1
)

cc_binary(
    name = "main",
    srcs = [":all"],
    deps = [":spdlog", ":cpptoml", "@libsockpp//:sockpp"],
    includes = ["../external/spdlog/include", "../external/cpptoml/include"],
    copts = ["-std=c++17"],
)
